--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,20 +1,18 @@
-<form class="col s12">
+<h1>Eat-da-Burger</h1>
+
+{{#each burger}}
+<form class="col s12" action="/update/{{ id }}" method="post">
   <div class="row">
-    <div class="input-field col s6">
-      <input placeholder="eg (Big Mac, Whopper)" id="burgerInput" type="text" class="validate" name="burger">
-      <label for="burgerInput">Insert a Burger</label>
+    {{id}}. <div class="input-field col s12">
+      <input type="text" value="{{burger_name}}" name="burger" id="burger" type="text" class="validate"> <small>({{date}})</small>
+      <a href="/delete/{{ id }}">delete</a>
+      <button class="btn waves-effect waves-light" type="submit" name="action">Update</button>
     </div>
   </div>
-  <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i>
-  </button>
 </form>
-
-{{#each burgers}}
-<div class="row">
-  <div class="col m6">
-    <h1>{{ this.burger_name }}</h1>
-    <h2>{{ this.id }}</h2>
-  </div>
-</div>
 {{/each}}
+
+<form action="/" method="post">
+  <textarea name="burgerdata" rows="8" cols="40"></textarea>
+  <button class="btn waves-effect waves-light" type="submit" name="action">Save Note!</button>
+</form>
